--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -80,6 +80,11 @@
 
         // Script for challenge filtering
         $(document).ready(function() {
+            // Set navbar selected
+            $(".challenges-link").addClass("navbar-selected");
+
+
+
             $('#filter-form').submit(function(e) {
                 e.preventDefault();
 
@@ -99,22 +104,11 @@
                 });
             });
         });
+
     </script>
 </head>
 <body style="background-color: #121212;">
-    <header id="main-header">
-        <h1>SaintCTF</h1>
-
-        <nav id="main-nav">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/rules">Rules</a></li>
-                <li><a class="navbar-selected" href="/challenges">Challenges</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/register">Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
+    {%  include 'navbar.html' %}
 
     <section id="flag-section">
         <h2>Filter Challenges</h2>
