--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -2,29 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | SaintCTF</title>
+    <title>Login | SaintCTF</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='nav.css') }}">
 
+       <!-- Sweet alert -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>    <!-- as lazy as normal alerts, better than you could make them yourself -->
+
     <!-- Jquery 3.6.0 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
 </head>
 <body style="background-color: #121212;">
     {%  include 'navbar.html' %}
 
-    <section id="home-section">
-        <h1>Welcome to SaintCTF</h1>
-        <p>Please sign up <a href="/register">here</a>!</p>
-        <p>If you are new to CTFs, then</p>
-        <p>INSERT CTF EXPLANATION HERE</p>
-    </section>
+    <h2>Insert leaderboard here</h2>
 
     <script>
+
+
         $(document).ready(function() {
             // Set navbar selected
-            $(".home-link").addClass("navbar-selected");
+            $(".leaderboard-link").addClass("navbar-selected");
         });
     </script>
 </body>
