--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,11 +7,15 @@
             <li><a class="rules-link" href="/rules">Rules</a></li>
             <li><a class="leaderboard-link" href="/leaderboard">Leaderboard</a></li>
             <li><a class="challenges-link" href="/challenges">Challenges</a></li>
+
+            <li>|</li>
+
             {% if not user.is_authenticated %}
                 <li><a class="login-link" href="/login">Login</a></li>
                 <li><a class="signup-link" href="/register">Sign Up</a></li>
             {% else %}
                 <li><a class="logout-link" href="/logout">Logout</a></li>
+                <li><a class="profile-link" href="/profile/{{ user.uid }}">Profile</a></li>
             {% endif %}
         </ul>
     </nav>
