--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -1,10 +1,7 @@
-/* General body and background styles */
-body {
-    background-color: #121212;
-    color: #fff;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+/* Enable scrolling again */
+body, html {
+    overflow: auto;
+    padding-bottom: 100px;
 }
 
 /* Styling links */
@@ -19,7 +16,6 @@ a:hover {
 
 /* Section headings */
 h2 {
-    border-bottom: 1px solid #333;
     padding-bottom: 10px;
 }
 
@@ -75,4 +71,16 @@ html, body {
 
 tr#current-user td#username-data::after {
     content: " (You)"
+}
+
+
+/* Format graph */
+#leaderboard-page {
+    width: 70%;
+    margin: 0 auto;
+}
+
+#leaderboard-heading {
+    text-align: center;
+    padding-top: 20px;
 }
