--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,36 +22,41 @@
 
     <main class="container">
         <section id="user-profile-card">
-            <h2>{{ displayed_user.username }}</h2>
-            <h2>Points: {{ displayed_user.score }}</h2>
+            <h2 id="username-heading">{{ displayed_user.username }}</h2>
+            <h2>Rank {{ rank }}</h2>
+            <h2>{{ displayed_user.score }} Points</h2>
         </section>
 
         <canvas id="score-history"></canvas>
 
         <section id="recent-solves">
             <h2>Solves</h2>
-            <table class="solves-table">
-                <thead>
-                    <tr>
-                        <th>Challenge</th>
-                        <th>Category</th>
-                        <th>Difficulty</th>
-                        <th>Points</th>
-                        <th>Time</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for solve in solves %}
-                    <tr>
-                        <td>{{ solve.challenge.name }}</td>
-                        <td>{{ solve.challenge.category }}</td>
-                        <td>{{ solve.challenge.difficulty }}</td>
-                        <td>{{ solve.challenge.points }}</td>
-                        <td>{{ solve.time_ago }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+            {% if solves %}
+                <table class="solves-table">
+                    <thead>
+                        <tr>
+                            <th>Challenge</th>
+                            <th>Category</th>
+                            <th>Difficulty</th>
+                            <th>Points</th>
+                            <th>Time</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for solve in solves %}
+                        <tr>
+                            <td>{{ solve.challenge.name }}</td>
+                            <td>{{ solve.challenge.category }}</td>
+                            <td>{{ solve.challenge.difficulty }}</td>
+                            <td>{{ solve.challenge.points }}</td>
+                            <td>{{ solve.time_ago }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <p>No solves yet :(</p>
+            {% endif %}
         </section>
     </main>
 
@@ -95,9 +100,6 @@
                             ticks: {
                                 color: '#FFFFFF' // White color for ticks
                             },
-                            grid: {
-                                color: 'rgba(255,255,255,0.1)' // Lighter grid lines against dark background
-                            }
                         },
                         y: {
                             beginAtZero: true,
@@ -106,6 +108,10 @@
                             },
                             grid: {
                                 color: 'rgba(255,255,255,0.1)' // Lighter grid lines against dark background
+                            },
+                            title: {
+                                display: true,
+                                text: 'Score'
                             }
                         }
                     },
