--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -110,73 +110,75 @@
 <body style="background-color: #121212;">
 {% include 'navbar.html' %}
 
-<section id="flag-section">
-    <h2>Filter Challenges</h2>
-    <!-- Challenge filtering form -->
-    <form id="filter-form">
-        <select name="category">
-            <option value="">All Categories</option>
-            <option value="web">web</option>
-            <option value="crypto">crypto</option>
-            <option value="pwn">pwn</option>
-            <option value="rev">rev</option>
-            <option value="osint">osint</option>
-            <option value="misc">misc</option>
-        </select>
-        <select name="difficulty">
-            <option value="">All Difficulties</option>
-            <option value="free">free</option>
-            <option value="easy">easy</option>
-            <option value="medium">medium</option>
-            <option value="hard">hard</option>
-        </select>
-        <input type="submit" value="Filter">
-    </form>
+<main id="challenge-main">
+    <section id="flag-section">
+        <h2>Filter Challenges</h2>
+        <!-- Challenge filtering form -->
+        <form id="filter-form">
+            <select name="category">
+                <option value="">All Categories</option>
+                <option value="web">web</option>
+                <option value="crypto">crypto</option>
+                <option value="pwn">pwn</option>
+                <option value="rev">rev</option>
+                <option value="osint">osint</option>
+                <option value="misc">misc</option>
+            </select>
+            <select name="difficulty">
+                <option value="">All Difficulties</option>
+                <option value="free">free</option>
+                <option value="easy">easy</option>
+                <option value="medium">medium</option>
+                <option value="hard">hard</option>
+            </select>
+            <input type="submit" value="Filter">
+        </form>
 
 
-    <h2>Flag Submission</h2>
-    <!-- Flag submission form -->
-    <form action="/submit-flag" id="flag-form" method="post">
-        <label for="flag"></label><input type="text" id="flag" name="flag" placeholder="saint{EXAMPLE_FLAG}">
-        <input type="submit" value="Submit Flag">
+        <h2>Flag Submission</h2>
+        <!-- Flag submission form -->
+        <form action="/submit-flag" id="flag-form" method="post">
+            <label for="flag"></label><input type="text" id="flag" name="flag" placeholder="saint{EXAMPLE_FLAG}">
+            <input type="submit" value="Submit Flag">
 
-    </form>
+        </form>
 
-    <strong>Hello {{ current_user.username }}</strong> <br>
-    <strong>You have {{ current_user.score }} points</strong>
+        <strong>Hello {{ current_user.username }}</strong> <br>
+        <strong>You have {{ current_user.score }} points</strong>
 
-</section>
+    </section>
 
-<section id="challenge-list">
-    <p>{{ challenges|length }} challenge(s) left to solve</p>
+    <section id="challenge-list">
+        <p>{{ challenges|length }} challenge(s) left to solve</p>
 
-    {% for challenge in challenges %}
-        <article class="challenge" data-category="{{ challenge.category }}"
-                 data-difficulty="{{ challenge.difficulty }}">
-            <!-- Challenge info -->
-            <h2>{{ challenge.name }}</h2>
-            <p class="description"> {{ challenge.description | safe }} </p>
-            <p class="category"><strong>Category:</strong> {{ challenge.category }}</p>
-            <p class="difficulty"><strong>Difficulty:</strong> {{ challenge.difficulty }}</p>
-            <p class="points"><strong>Points:</strong> {{ challenge.points }}</p>
-            <p class="author"><strong>Author:</strong> {{ challenge.author }}</p>
-            <p class="solve-counter"><strong>Solves:</strong> {{ challenge.solvers|length }}</p>
+        {% for challenge in challenges %}
+            <article class="challenge" data-category="{{ challenge.category }}"
+                     data-difficulty="{{ challenge.difficulty }}">
+                <!-- Challenge info -->
+                <h2>{{ challenge.name }}</h2>
+                <p class="description"> {{ challenge.description | safe }} </p>
+                <p class="category"><strong>Category:</strong> {{ challenge.category }}</p>
+                <p class="difficulty"><strong>Difficulty:</strong> {{ challenge.difficulty }}</p>
+                <p class="points"><strong>Points:</strong> {{ challenge.points }}</p>
+                <p class="author"><strong>Author:</strong> {{ challenge.author }}</p>
+                <p class="solve-counter"><strong>Solves:</strong> {{ challenge.solvers|length }}</p>
 
-            {% if challenge.files %}
-                <!-- Challenge downloads -->
-                <div class="files">
-                    <ul>
-                        {% for file in challenge.files %}
-                            <li><a href="{{ file.url }}" download="{{ file.name }}">{{ file.name }}</a></li>
+                {% if challenge.files %}
+                    <!-- Challenge downloads -->
+                    <div class="files">
+                        <ul>
+                            {% for file in challenge.files %}
+                                <li><a href="{{ file.url }}" download="{{ file.name }}">{{ file.name }}</a></li>
 
-                        {% endfor %}
-                    </ul>
-                </div>
-            {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
 
 
-        </article>
-    {% endfor %}
-</section>
+            </article>
+        {% endfor %}
+    </section>
+</main>
 </body>
 </html>
